# fanterra

./: Cargo.toml  LICENSE.txt  README.md
src/: game.rs  main.rs  setup.rs
